--- a/web/source/package.json
+++ b/web/source/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "datatables": "^1.10.18"
   }
 }
