Adds table to expenses page

--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -13,7 +13,7 @@ AppBundle\Entity\Orders:
   orders_{1..500}:
     productName: <name()>
     productBuy: <randomFloat('10000','16000','2')>
-    productSale: <randomFloat('25000','30000','2')>
+    productSale: <randomFloat('17000','23000','2')>
     dateCreated: <dateTimeBetween('-6 months', 'now')>
     dateDelivery: <dateTimeBetween($dateCreated, "now")>
     productCategory: '@product_categories_*'
@@ -23,4 +23,5 @@ AppBundle\Entity\Expenses:
   expences_{1..500}:
     type: <boolean(35)>
     name: <name()>
+    date: <dateTimeBetween('-2 months', 'now')>
     amount: <randomFloat('200','6000','2')>
